--- a/pom.xml
+++ b/pom.xml
@@ -96,6 +96,22 @@
         <artifactId>commons-fileupload</artifactId>
         <version>1.4</version>
       </dependency>
+      <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-context-support</artifactId>
+        <version>5.2.8.RELEASE</version>
+      </dependency>
+      <dependency>
+        <groupId>javax.mail</groupId>
+        <artifactId>javax.mail-api</artifactId>
+        <version>1.6.2</version>
+      </dependency>
+        <dependency>
+        <groupId>com.sun.mail</groupId>
+        <artifactId>javax.mail</artifactId>
+        <version>1.6.2</version>
+      </dependency>
+
     </dependencies>
   </dependencyManagement>
 
