--- a/pom.xml
+++ b/pom.xml
@@ -103,13 +103,13 @@
       </dependency>
       <dependency>
         <groupId>javax.mail</groupId>
-        <artifactId>javax.mail-api</artifactId>
-        <version>1.6.2</version>
+        <artifactId>mail</artifactId>
+        <version>1.4.7</version>
       </dependency>
-        <dependency>
-        <groupId>com.sun.mail</groupId>
-        <artifactId>javax.mail</artifactId>
-        <version>1.6.2</version>
+      <dependency>
+        <groupId>org.thymeleaf</groupId>
+        <artifactId>thymeleaf-spring4</artifactId>
+        <version>3.0.15.RELEASE</version>
       </dependency>
 
     </dependencies>
