--- a/services/pom.xml
+++ b/services/pom.xml
@@ -46,11 +46,12 @@
 
     <dependency>
       <groupId>javax.mail</groupId>
-      <artifactId>javax.mail-api</artifactId>
+      <artifactId>mail</artifactId>
     </dependency>
+
     <dependency>
-      <groupId>com.sun.mail</groupId>
-      <artifactId>javax.mail</artifactId>
+      <groupId>org.thymeleaf</groupId>
+      <artifactId>thymeleaf-spring4</artifactId>
     </dependency>
   </dependencies>
 
