Allow for i18n and size adaptation
Text not hardcoded anymore and can be referenced from
messages.properties

--- a/webapp/src/main/webapp/WEB-INF/web.xml
+++ b/webapp/src/main/webapp/WEB-INF/web.xml
@@ -56,7 +56,7 @@ http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
 
   <error-page>
     <error-code>404</error-code>
-    <location>/errors</location>
+    <location>/WEB-INF/jsp/errors/errorPage.jsp</location>
   </error-page>
 
 
