Fix bug with error page
Bad routing for error page

--- a/webapp/src/main/webapp/WEB-INF/web.xml
+++ b/webapp/src/main/webapp/WEB-INF/web.xml
@@ -19,6 +19,7 @@ http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
       <param-value>FALSE</param-value>
     </init-param>
   </filter>
+
   <filter-mapping>
     <filter-name>encoding-filter</filter-name>
     <url-pattern>/*</url-pattern>
@@ -55,9 +56,25 @@ http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
 
 
   <error-page>
+    <error-code>400</error-code>
+    <location>/WEB-INF/jsp/errors/errorPage.jsp</location>
+  </error-page>
+
+  <error-page>
+    <error-code>401</error-code>
+    <location>/WEB-INF/jsp/errors/errorPage.jsp</location>
+  </error-page>
+
+  <error-page>
     <error-code>404</error-code>
     <location>/WEB-INF/jsp/errors/errorPage.jsp</location>
   </error-page>
+
+  <error-page>
+    <error-code>500</error-code>
+    <location>/WEB-INF/jsp/errors/errorPage.jsp</location>
+  </error-page>
+
 
 
 
