--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
 
   <properties>
     <spring.version>4.2.5.RELEASE</spring.version>
+    <spring-security.version>4.0.4.RELEASE</spring-security.version>
     <org.postgresql.version>42.2.5</org.postgresql.version>
     <javax.validation-api.version>1.0.0.GA</javax.validation-api.version>
     <org.hibernate-validator.version>4.3.1.Final</org.hibernate-validator.version>
@@ -43,7 +44,6 @@
         <version>${spring.version}</version>
         <scope>test</scope>
       </dependency>
-
       <dependency>
         <groupId>javax.servlet</groupId>
         <artifactId>servlet-api</artifactId>
@@ -55,7 +55,6 @@
         <artifactId>jstl</artifactId>
         <version>1.2</version>
       </dependency>
-
       <dependency>
         <groupId>javax.validation</groupId>
         <artifactId>validation-api</artifactId>
@@ -66,13 +65,11 @@
         <artifactId>hibernate-validator</artifactId>
         <version>${org.hibernate-validator.version}</version>
       </dependency>
-
       <dependency>
         <groupId>org.postgresql</groupId>
         <artifactId>postgresql</artifactId>
         <version>${org.postgresql.version}</version>
       </dependency>
-
       <dependency>
         <groupId>junit</groupId>
         <artifactId>junit</artifactId>
@@ -111,7 +108,24 @@
         <artifactId>thymeleaf-spring4</artifactId>
         <version>3.0.15.RELEASE</version>
       </dependency>
-
+      <dependency>
+        <groupId>org.springframework.security</groupId>
+        <artifactId>spring-security-core</artifactId>
+        <version>${spring-security.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.springframework.security</groupId>
+        <artifactId>spring-security-web</artifactId>
+        <version>${spring-security.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.springframework.security</groupId>
+        <artifactId>spring-security-config</artifactId>
+        <version>${spring-security.version}</version>
+      </dependency>
+      <!--
+      ADD MORE HERE
+      -->
     </dependencies>
   </dependencyManagement>
 
