--- a/webapp/src/main/webapp/WEB-INF/web.xml
+++ b/webapp/src/main/webapp/WEB-INF/web.xml
@@ -31,7 +31,10 @@ http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
   </context-param>
   <context-param>
     <param-name>contextConfigLocation</param-name>
-    <param-value>ar.edu.itba.paw.webapp.config.WebConfig</param-value>
+    <param-value>
+      ar.edu.itba.paw.webapp.config.WebConfig,
+      ar.edu.itba.paw.webapp.config.WebAuthConfig
+    </param-value>
   </context-param>
 
   <listener>
@@ -66,6 +69,11 @@ http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
   </error-page>
 
   <error-page>
+    <error-code>403</error-code>
+    <location>/WEB-INF/jsp/errors/errorPage.jsp</location>
+  </error-page>
+
+  <error-page>
     <error-code>404</error-code>
     <location>/WEB-INF/jsp/errors/errorPage.jsp</location>
   </error-page>
@@ -75,7 +83,15 @@ http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
     <location>/WEB-INF/jsp/errors/errorPage.jsp</location>
   </error-page>
 
-
+  <filter>
+    <filter-name>springSecurityFilterChain</filter-name>
+    <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+  </filter>
+  
+  <filter-mapping>
+    <filter-name>springSecurityFilterChain</filter-name>
+    <url-pattern>*</url-pattern>
+  </filter-mapping>
 
 
 </web-app>
