--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,9 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
+    <org.slf4j.version>1.7.5</org.slf4j.version>
+    <logback.version>1.1.2</logback.version>
+    <logback-ext-spring.version>0.1.1</logback-ext-spring.version>
   </properties>
 
   <dependencyManagement>
@@ -123,7 +126,9 @@
         <artifactId>spring-security-config</artifactId>
         <version>${spring-security.version}</version>
       </dependency>
+      <!--ADD DEPENDENCIES HERE-->
     </dependencies>
+
   </dependencyManagement>
 
   <modules>
