--- a/persistence/pom.xml
+++ b/persistence/pom.xml
@@ -52,6 +52,10 @@
       <groupId>org.hsqldb</groupId>
       <artifactId>hsqldb</artifactId>
     </dependency>
+      <dependency>
+          <groupId>org.slf4j</groupId>
+          <artifactId>slf4j-api</artifactId>
+      </dependency>
   </dependencies>
 
   <build>
