--- a/models/pom.xml
+++ b/models/pom.xml
@@ -21,6 +21,10 @@
             <groupId>javax.validation</groupId>
             <artifactId>validation-api</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.hibernate.javax.persistence</groupId>
+            <artifactId>hibernate-jpa-2.1-api</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
