--- a/webapp/src/main/webapp/WEB-INF/web.xml
+++ b/webapp/src/main/webapp/WEB-INF/web.xml
@@ -93,5 +93,12 @@ http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
         <url-pattern>*</url-pattern>
     </filter-mapping>
 
-
+    <filter>
+        <filter-name>openEntityManagerInView</filter-name>
+        <filter-class>org.springframework.orm.jpa.support.OpenEntityManagerInViewFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>openEntityManagerInView</filter-name>
+        <url-pattern>*</url-pattern>
+    </filter-mapping>
 </web-app>
