--- a/webapp/src/main/resources/application.properties
+++ b/webapp/src/main/resources/application.properties
@@ -1,6 +1,7 @@
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-spring.mail.username=<login user to smtp server>
-spring.mail.password=<login password to smtp server>
+mail.host=smtp.gmail.com
+mail.port=587
+mail.username=neibonotifs@gmail.com
+mail.password=syik eiaz utfl fpse
+
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
