--- a/webapp/src/main/webapp/WEB-INF/web.xml
+++ b/webapp/src/main/webapp/WEB-INF/web.xml
@@ -41,7 +41,7 @@ http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
     </listener>
 
-    <servlet>
+    <!--<servlet>
         <servlet-name>dispatcher</servlet-name>
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
         <init-param>
@@ -54,7 +54,7 @@ http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
     <servlet-mapping>
         <servlet-name>dispatcher</servlet-name>
         <url-pattern>/</url-pattern>
-    </servlet-mapping>
+    </servlet-mapping>-->
 
     <error-page>
         <error-code>400</error-code>
@@ -86,16 +86,17 @@ http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
         <location>/WEB-INF/jsp/errors/errorPage.jsp</location>
     </error-page>
 
+    <!-- -->
 
-    <filter>
+    <!--<filter>
         <filter-name>springSecurityFilterChain</filter-name>
         <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
     </filter>
-
     <filter-mapping>
         <filter-name>springSecurityFilterChain</filter-name>
         <url-pattern>*</url-pattern>
-    </filter-mapping>
+    </filter-mapping>-->
+
 
     <filter>
         <filter-name>openEntityManagerInView</filter-name>
@@ -104,5 +105,24 @@ http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
     <filter-mapping>
         <filter-name>openEntityManagerInView</filter-name>
         <url-pattern>*</url-pattern>
+    </filter-mapping>
+
+
+    <filter>
+        <filter-name>jersey</filter-name>
+        <filter-class>org.glassfish.jersey.servlet.ServletContainer</filter-class>
+        <init-param>
+            <param-name>jersey.config.server.provider.packages</param-name>
+            <param-value>ar.edu.itba.paw.webapp.controller</param-value>
+        </init-param>
+        <!-- pass to next filter if Jersey/App returns 404 -->
+        <init-param>
+            <param-name>jersey.config.servlet.filter.forwardOn404</param-name>
+            <param-value>true</param-value>
+        </init-param>
+    </filter>
+    <filter-mapping>
+        <filter-name>jersey</filter-name>
+        <url-pattern>/*</url-pattern>
     </filter-mapping>
 </web-app>
