--- a/webapp/src/main/webapp/WEB-INF/web.xml
+++ b/webapp/src/main/webapp/WEB-INF/web.xml
@@ -114,12 +114,24 @@ http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
         <init-param>
             <param-name>jersey.config.server.provider.packages</param-name>
             <param-value>ar.edu.itba.paw.webapp.controller</param-value>
+<!--            <param-value>-->
+<!--                ar.edu.itba.paw.webapp.controller,-->
+<!--                ar.edu.itba.paw.webapp.form-->
+<!--            </param-value>-->
         </init-param>
         <!-- pass to next filter if Jersey/App returns 404 -->
         <init-param>
             <param-name>jersey.config.servlet.filter.forwardOn404</param-name>
             <param-value>true</param-value>
         </init-param>
+<!--        <init-param>-->
+<!--            <param-name>jersey.config.beanValidation.enableOutputValidationErrorEntity.server</param-name>-->
+<!--            <param-value>true</param-value>-->
+<!--        </init-param>-->
+<!--        <init-param>-->
+<!--            <param-name>jersey.config.server.response.setStatusOverSendError</param-name>-->
+<!--            <param-value>true</param-value>-->
+<!--        </init-param>-->
     </filter>
     <filter-mapping>
         <filter-name>jersey</filter-name>
