--- a/webapp/src/main/webapp/WEB-INF/web.xml
+++ b/webapp/src/main/webapp/WEB-INF/web.xml
@@ -56,35 +56,35 @@ http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
         <url-pattern>/</url-pattern>
     </servlet-mapping>-->
 
-    <error-page>
-        <error-code>400</error-code>
-        <location>/WEB-INF/jsp/errors/errorPage.jsp</location>
-    </error-page>
+<!--    <error-page>-->
+<!--        <error-code>400</error-code>-->
+<!--        <location>/WEB-INF/jsp/errors/errorPage.jsp</location>-->
+<!--    </error-page>-->
 
-    <error-page>
-        <error-code>401</error-code>
-        <location>/WEB-INF/jsp/errors/errorPage.jsp</location>
-    </error-page>
+<!--    <error-page>-->
+<!--        <error-code>401</error-code>-->
+<!--        <location>/WEB-INF/jsp/errors/errorPage.jsp</location>-->
+<!--    </error-page>-->
 
-    <error-page>
-        <error-code>403</error-code>
-        <location>/WEB-INF/jsp/errors/errorPage.jsp</location>
-    </error-page>
+<!--    <error-page>-->
+<!--        <error-code>403</error-code>-->
+<!--        <location>/WEB-INF/jsp/errors/errorPage.jsp</location>-->
+<!--    </error-page>-->
 
-    <error-page>
-        <error-code>404</error-code>
-        <location>/WEB-INF/jsp/errors/errorPage.jsp</location>
-    </error-page>
+<!--    <error-page>-->
+<!--        <error-code>404</error-code>-->
+<!--        <location>/WEB-INF/jsp/errors/errorPage.jsp</location>-->
+<!--    </error-page>-->
 
-    <error-page>
-        <error-code>405</error-code>
-        <location>/WEB-INF/jsp/errors/errorPage.jsp</location>
-    </error-page>
+<!--    <error-page>-->
+<!--        <error-code>405</error-code>-->
+<!--        <location>/WEB-INF/jsp/errors/errorPage.jsp</location>-->
+<!--    </error-page>-->
 
-    <error-page>
-        <error-code>500</error-code>
-        <location>/WEB-INF/jsp/errors/errorPage.jsp</location>
-    </error-page>
+<!--    <error-page>-->
+<!--        <error-code>500</error-code>-->
+<!--        <location>/WEB-INF/jsp/errors/errorPage.jsp</location>-->
+<!--    </error-page>-->
 
     <!-- -->
 
