--- a/pom.xml
+++ b/pom.xml
@@ -258,6 +258,11 @@
                 <artifactId>jersey-media-jaxb</artifactId>
                 <version>${jersey.version}</version>
             </dependency>
+            <dependency>
+                <groupId>javax.ws.rs</groupId>
+                <artifactId>javax.ws.rs-api</artifactId>
+                <version>2.1</version>
+            </dependency>
             <!--ADD DEPENDENCIES HERE-->
         </dependencies>
 
