--- a/webapp/src/main/webapp/WEB-INF/web.xml
+++ b/webapp/src/main/webapp/WEB-INF/web.xml
@@ -88,14 +88,14 @@ http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
 
     <!-- -->
 
-    <!--<filter>
+    <filter>
         <filter-name>springSecurityFilterChain</filter-name>
         <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
     </filter>
     <filter-mapping>
         <filter-name>springSecurityFilterChain</filter-name>
         <url-pattern>*</url-pattern>
-    </filter-mapping>-->
+    </filter-mapping>
 
 
     <filter>
@@ -115,7 +115,8 @@ http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
             <param-name>jersey.config.server.provider.packages</param-name>
             <param-value>
                 ar.edu.itba.paw.webapp.controller,
-                ar.edu.itba.paw.webapp.mappers
+                ar.edu.itba.paw.webapp.mappers,
+                ar.edu.itba.paw.webapp.security
             </param-value>
         </init-param>
         <!-- pass to next filter if Jersey/App returns 404 -->
