--- a/webapp/src/main/webapp/WEB-INF/web.xml
+++ b/webapp/src/main/webapp/WEB-INF/web.xml
@@ -50,7 +50,6 @@ http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
         </init-param>
         <load-on-startup>1</load-on-startup>
     </servlet>
-
     <servlet-mapping>
         <servlet-name>dispatcher</servlet-name>
         <url-pattern>/</url-pattern>
@@ -86,17 +85,18 @@ http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
         <location>/WEB-INF/jsp/errors/errorPage.jsp</location>
     </error-page>
 
-    <!-- -->
+    <!-- JWT -->
 
-    <filter>
+    <!--<filter>
         <filter-name>springSecurityFilterChain</filter-name>
         <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
     </filter>
     <filter-mapping>
         <filter-name>springSecurityFilterChain</filter-name>
         <url-pattern>*</url-pattern>
-    </filter-mapping>
+    </filter-mapping>-->
 
+    <!-- JWT -->
 
     <filter>
         <filter-name>openEntityManagerInView</filter-name>
