Add necessary dependencies for image processing

--- a/pom.xml
+++ b/pom.xml
@@ -275,6 +275,11 @@
                 <artifactId>jjwt</artifactId>
                 <version>${jjwt.version}</version>
             </dependency>
+            <dependency>
+                <groupId>org.glassfish.jersey.media</groupId>
+                <artifactId>jersey-media-multipart</artifactId>
+                <version>${jersey.version}</version>
+            </dependency>
             <!--ADD DEPENDENCIES HERE-->
         </dependencies>
 
