--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -152,6 +152,10 @@
             <groupId>org.eclipse.persistence</groupId>
             <artifactId>org.eclipse.persistence.moxy</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.glassfish.jersey.media</groupId>
+            <artifactId>jersey-media-multipart</artifactId>
+        </dependency>
 
         <!-- JJWT -->
         <dependency>
