--- a/webapp/src/main/webapp/WEB-INF/web.xml
+++ b/webapp/src/main/webapp/WEB-INF/web.xml
@@ -54,6 +54,7 @@ http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
         <servlet-name>dispatcher</servlet-name>
         <url-pattern>/</url-pattern>
     </servlet-mapping>-->
+<!--
 
     <error-page>
         <error-code>400</error-code>
@@ -84,6 +85,7 @@ http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
         <error-code>500</error-code>
         <location>/WEB-INF/jsp/errors/errorPage.jsp</location>
     </error-page>
+-->
 
     <!-- JWT -->
 
@@ -116,6 +118,7 @@ http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
             <param-value>
                 ar.edu.itba.paw.webapp.controller,
                 ar.edu.itba.paw.webapp.mappers,
+                ar.edu.itba.paw.webapp.mappersJax,
                 ar.edu.itba.paw.webapp.security
             </param-value>
         </init-param>
