--- a/webapp/front/front/angular.json
+++ b/webapp/front/front/angular.json
@@ -25,7 +25,16 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "src/assets/styles/home.css",
+              "src/assets/styles/commons.css",
+              "src/assets/styles/home.css",
+              "src/assets/styles/postcard.css",
+              "src/assets/styles/landingPage.css",
+              "src/assets/styles/error.css",
+              "src/assets/styles/calendarBox.css",
+              "src/assets/styles/calendarWidget.css",
+              "src/assets/styles/service.css"
             ],
             "scripts": []
           },
