--- a/pom.xml
+++ b/pom.xml
@@ -185,12 +185,6 @@
                 <groupId>org.hibernate</groupId>
                 <artifactId>hibernate-core</artifactId>
                 <version>${org.hibernate.version}</version>
-<!--                <exclusions>
-                    <exclusion>
-                        <groupId>com.fasterxml</groupId>
-                        <artifactId>classmate</artifactId>
-                    </exclusion>
-                </exclusions>-->
             </dependency>
             <dependency>
                 <groupId>org.hibernate</groupId>
@@ -285,6 +279,13 @@
                 <groupId>org.glassfish.jersey.media</groupId>
                 <artifactId>jersey-media-multipart</artifactId>
                 <version>${jersey.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>commons-io</groupId>
+                <artifactId>commons-io</artifactId>
+                <version>2.13.0</version>
+                <scope>compile</scope>
             </dependency>
             <!--ADD DEPENDENCIES HERE-->
         </dependencies>
