--- a/webapp/front/front/angular.json
+++ b/webapp/front/front/angular.json
@@ -4,6 +4,12 @@
   "newProjectRoot": "projects",
   "projects": {
     "front": {
+      "i18n": {
+        "sourceLocale": "en-US",
+        "locales": {
+          "es-AR": "src/locale/messages.es.xlf"
+        }
+      },
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -13,6 +19,9 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
+            "localize": [
+              "es-AR"
+            ],
             "outputPath": "dist/front",
             "index": "src/index.html",
             "browser": "src/main.ts",
