Start detailed authentication system

--- a/webapp/src/main/resources/application.properties
+++ b/webapp/src/main/resources/application.properties
@@ -3,5 +3,12 @@ mail.port=587
 mail.username=neibonotifs@gmail.com
 mail.password=syik eiaz utfl fpse
 
+jwt.audience = neibo-users
+jwt.issuer = neibo-enterprise
+jwt.authorityClaim = auth-claim
+jwt.refreshCountClaim = count-claim
+jwt.refreshLimitClaim = refresh-claim
+
+
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
