--- a/webapp/src/main/resources/application.properties
+++ b/webapp/src/main/resources/application.properties
@@ -7,7 +7,7 @@ jwt.audience = neibo-users
 jwt.issuer = neibo-enterprise
 jwt.authorityClaim = auth-claim
 jwt.refreshCountClaim = count-claim
-jwt.refreshLimitClaim = refresh-claim
+jwt.tokenType = token-type
 
 
 spring.mail.properties.mail.smtp.auth=true
