--- a/webapp/src/main/webapp/WEB-INF/web.xml
+++ b/webapp/src/main/webapp/WEB-INF/web.xml
@@ -121,7 +121,7 @@ http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
 
                 <!-- comment these to deactivate exception catchers -->
                 ar.edu.itba.paw.webapp.mappers,
-                ar.edu.itba.paw.webapp.mappersJax,
+                ar.edu.itba.paw.webapp.mappers.jax,
             </param-value>
         </init-param>
         <!-- pass to next filter if Jersey/App returns 404 -->
