--- a/webapp/front/front/package.json
+++ b/webapp/front/front/package.json
@@ -23,6 +23,7 @@
     "@ngx-translate/http-loader": "^8.0.0",
     "bootstrap": "^5.3.2",
     "chalk": "^5.3.0",
+    "date-fns": "^4.1.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.6.2",
     "zone.js": "~0.14.2"
