--- a/webapp/src/main/webapp/WEB-INF/web.xml
+++ b/webapp/src/main/webapp/WEB-INF/web.xml
@@ -120,8 +120,8 @@ http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
                 ar.edu.itba.paw.webapp.security
 
                 <!-- comment these to deactivate exception catchers -->
-                ar.edu.itba.paw.webapp.mappers,
-                ar.edu.itba.paw.webapp.mappers.jax,
+<!--                ar.edu.itba.paw.webapp.mappers,-->
+<!--                ar.edu.itba.paw.webapp.mappers.jax,-->
             </param-value>
         </init-param>
         <init-param>
