--- a/webapp/front/front/package.json
+++ b/webapp/front/front/package.json
@@ -27,6 +27,7 @@
     "ngx-infinite-scroll": "^17.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.6.2",
+    "uri-template": "^2.0.0",
     "zone.js": "~0.14.2"
   },
   "devDependencies": {
