chore: revive partial functioning of tags fitler widget

--- a/webapp/front/front/angular.json
+++ b/webapp/front/front/angular.json
@@ -46,7 +46,9 @@
               "src/assets/styles/calendarBox.css",
               "src/assets/styles/service.css"
             ],
-            "scripts": []
+            "scripts": [
+  "src/assets/js/tagsWidgetHandler.js"
+]
           },
           "configurations": {
             "production": {
