chore: fix some const maps to fetch api real data and implement smart paginator

--- a/webapp/front/front/angular.json
+++ b/webapp/front/front/angular.json
@@ -19,20 +19,13 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
-            "localize": [
-              "es-AR"
-            ],
+            "localize": ["es-AR"],
             "outputPath": "dist/front",
             "index": "src/index.html",
             "browser": "src/main.ts",
-            "polyfills": [
-              "zone.js"
-            ],
+            "polyfills": ["zone.js"],
             "tsConfig": "tsconfig.app.json",
-            "assets": [
-              "src/favicon.ico",
-              "src/assets"
-            ],
+            "assets": ["src/favicon.ico", "src/assets"],
             "styles": [
               "node_modules/@fortawesome/fontawesome-free/css/all.min.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
@@ -47,8 +40,9 @@
               "src/assets/styles/service.css"
             ],
             "scripts": [
-  "src/assets/js/tagsWidgetHandler.js"
-]
+              "src/assets/js/tagsWidgetHandler.js",
+              "src/assets/js/tagsPublishHandler.js"
+            ]
           },
           "configurations": {
             "production": {
@@ -95,18 +89,10 @@
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
-            "polyfills": [
-              "zone.js",
-              "zone.js/testing"
-            ],
+            "polyfills": ["zone.js", "zone.js/testing"],
             "tsConfig": "tsconfig.spec.json",
-            "assets": [
-              "src/favicon.ico",
-              "src/assets"
-            ],
-            "styles": [
-              "src/styles.css"
-            ],
+            "assets": ["src/favicon.ico", "src/assets"],
+            "styles": ["src/styles.css"],
             "scripts": []
           }
         }
