feat: maintain local storage sessions and fix item filter widgets among other small fixes

--- a/webapp/front/front/angular.json
+++ b/webapp/front/front/angular.json
@@ -39,10 +39,7 @@
               "src/assets/styles/calendarBox.css",
               "src/assets/styles/service.css"
             ],
-            "scripts": [
-              "src/assets/js/tagsWidgetHandler.js",
-              "src/assets/js/tagsPublishHandler.js"
-            ]
+            "scripts": []
           },
           "configurations": {
             "production": {
