--- a/webapp/front/front/package.json
+++ b/webapp/front/front/package.json
@@ -24,6 +24,7 @@
     "bootstrap": "^5.3.2",
     "chalk": "^5.3.0",
     "date-fns": "^4.1.0",
+    "jwt-decode": "^4.0.0",
     "ngx-infinite-scroll": "^17.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.6.2",
