--- a/webapp/front/front/package.json
+++ b/webapp/front/front/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
+    "extract-i18n": "ngx-translate-extract -i src -o src/assets/i18n/en.json src/assets/i18n/es.json -f namespaced-json",
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
@@ -37,7 +38,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^17.0.9",
-    "@angular/cli": "^17.0.9",
+    "@angular/cli": "^19.0.7",
     "@angular/compiler-cli": "^17.0.0",
     "@angular/localize": "^17.1.0",
     "@types/jasmine": "~5.1.0",
