--- a/webapp/front/front/package.json
+++ b/webapp/front/front/package.json
@@ -28,6 +28,7 @@
     "@ngx-translate/http-loader": "^8.0.0",
     "bootstrap": "^5.3.2",
     "chalk": "^5.3.0",
+    "cheerio": "^1.0.0",
     "date-fns": "^4.1.0",
     "jwt-decode": "^4.0.0",
     "ngx-infinite-scroll": "^17.0.0",
