--- a/webapp/front/front/package.json
+++ b/webapp/front/front/package.json
@@ -49,6 +49,8 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "^5.3.3"
+    "postcss-nested": "^7.0.2",
+    "typescript": "^5.3.3",
+    "webpack-bundle-analyzer": "^4.10.2"
   }
 }
