chore: update controller top comments

--- a/pom.xml
+++ b/pom.xml
@@ -340,6 +340,7 @@
         <module>interfaces</module>
         <module>persistence</module>
         <module>services</module>
+<!--        <module>frontend</module>-->
     </modules>
 
 </project>
