--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "extract-i18n": "ngx-translate-extract -i src -o src/assets/i18n/en.json src/assets/i18n/es.json -f namespaced-json",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build --base-href /paw-2023b-02/static/",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
