--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,20 +2,14 @@ services:
   webapp:
     build:
       context: .
-      dockerfile: Dockerfile
-    container_name: tomcat-paw
-    network_mode: host
-    depends_on:
-      - db
-
-  webapp-build:
-    build:
-      context: .
       dockerfile: Dockerfile.build
     container_name: tomcat-paw-build
-    network_mode: host
+    ports:
+      - "8079:8080"
     depends_on:
       - db
+    networks:
+      - pawnet
 
   db:
     image: postgres:14
@@ -26,3 +20,9 @@ services:
       - "5432:5432"
     volumes:
       - ./docker-init.sql:/docker-entrypoint-initdb.d/init.sql
+    networks:
+      - pawnet
+
+networks:
+  pawnet:
+    driver: bridge
